<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ShareAction"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/settingAction"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/contactus"
        android:title="@string/contact_us"
        android:icon="@drawable/contaact_us"
        app:showAsAction="never">
    <menu>
        <item
            android:title="@string/whatsapp"/>
        <item
            android:title="@string/linked_in"/>
    </menu>
    </item>


</menu>